Fixed #76578: "Allow zoom with fingers on mobile"

--- a/trellis.css
+++ b/trellis.css
@@ -88,6 +88,7 @@
 
 #map_surface {
     position: absolute;
+    touch-action: none;
     top: 0px;
     left: 0px;
     width: 100%;
